# rocket-vtol

./: .gitignore  README.md
imu_testing/: client.py  cmd_console.py  imu_test.py  main.py  server.py
imu_testing/bno055_test/: bno055_test.ino
reinforcement_learning/: lunar_lander_ppo.py  ppo_example.py
simulation/: CMakeLists.txt  Robot.cpp  anymal.py  ball_drop.py  ball_drop_visualized.py  cartpole_visualized.py  imgui.ini  rocket.py  test_drop.py
simulation/cartpole/: ai.py  cartpole.py  cartpole_env.py  cartpole_visualized.py  helpers.py  imgui.ini  run.py
simulation/designs/: test.urdf
simulation/drone/: drone_visualized.py  helpers.py  imgui.ini  pidhandler.py  pidtest.py
simulation/raisim_documentation/: articulated_system_doc.txt  box_doc.txt  camera_doc.txt  cone_doc.txt  coordinate_frame_doc.txt  instructions.txt  raisim_doc.txt  single_body_object_doc.txt  sphere_doc.txt  visualizer_doc.txt  world_doc.txt
src/: main.py  ultra-imu.py
src/i2c/: test.py
src/pid_full/: pid_full.ino
src/sensors/sensors-i2c-test/: sensors-i2c-test.ino
src/sensors/ultrasonic-imu-test/: ultrasonic-imu-test.ino
src/vtol/: vtol.ino
thrust_testing/: xbee2.py  xbee_test.py  xbox_test.py
thrust_testing/_gitignore/: _gitignore.ino
thrust_testing/arm/: arm.ino
thrust_testing/xbee_arm/: xbee_arm.ino
thrust_testing/xbee_test/: xbee_test.ino
